--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ img{
   flex-direction:column;
   max-width:375px;
   padding:20% 4%;
-  back-ground-color: #ecf2f8;
+  background-color: #ecf2f8;
 }
 .grid{
   padding:5% 8%;
